--- a/notebook/Gridding.ipynb
+++ b/notebook/Gridding.ipynb
@@ -22,13 +22,13 @@
     "- Estimation of geophysical signals in un-observed regions, based on noisy observations.\n",
     "- Data-reduction, where billions of points can be represented as a regular-grid.\n",
     "- Application of advanced digital signal processing algorithms.\n",
-    "- Data vizualization\n",
+    "- Data visualization\n",
     "\n",
-    "Satellite altimetry has for decades been used to study the worlds ice sheets and glaciers by measuring the change of elevation over time. One of the most widely used methods for deriving elevation change from altimtry is the \"crossover\" method. It is one of the most robust and accurate mthods currently avalibale. It can be used for both derving elevation change and to study the precision of the measurements themselves.\n",
+    "Satellite altimetry has for decades been used to study the worlds ice sheets and glaciers by measuring the change of elevation over time. One of the most widely used methods for deriving elevation change from altimetry is the \"crossover\" method. It is one of the most robust and accurate methods currently available. It can be used for both deriving elevation change and to study the precision of the measurements themselves.\n",
     "\n",
     "![crossover_method.png](attachment:crossover_method.png)   \n",
     "\n",
-    "From this method the surface elevation change is estimated at the intersection of two sub-satellite groundtracks at different times. At this crossover location the two closest points in eacg tracks is used to interpolate both elevation and time to the crossover location, allowing us to compute $\\delta h/\\delta t$ = $H_{t_{2}}-H_{t_{1}}$."
+    "From this method the surface elevation change is estimated at the intersection of two sub-satellite ground tracks at different times. At this crossover location the two closest points in each track is used to interpolate both elevation and time to the crossover location, allowing us to compute $\\delta h/\\delta t$ = $H_{t_{2}}-H_{t_{1}}$. Image credit Zwally et al. (1989)"
    ]
   },
   {
@@ -74,12 +74,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Before we do anything we need to get our data into our local enviroment in our little jupyter world! Let's mow download it from the ICESat-2 Hackweek S3 bucket by running the code below (just once):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws --no-sign-request s3 sync s3://pangeo-data-upload-oregon/icesat2/gridding-data/ data/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's load the crossovers so we can start working, using the h5py library. But first let's inspect what varibales we have to work with."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -88,20 +104,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dh_elv                   Dataset {4518496}\r\n",
-      "dhdt                     Dataset {4518496}\r\n",
-      "dt_year                  Dataset {4518496}\r\n",
-      "h_elv_1                  Dataset {4518496}\r\n",
-      "h_elv_2                  Dataset {4518496}\r\n",
-      "lat                      Dataset {4518496}\r\n",
-      "lon                      Dataset {4518496}\r\n",
-      "t_year_1                 Dataset {4518496}\r\n",
-      "t_year_2                 Dataset {4518496}\r\n"
+      "dh_elv                   Dataset {40992}\r\n",
+      "dhdt                     Dataset {40992}\r\n",
+      "dt_year                  Dataset {40992}\r\n",
+      "h_elv_1                  Dataset {40992}\r\n",
+      "h_elv_2                  Dataset {40992}\r\n",
+      "lat                      Dataset {40992}\r\n",
+      "lon                      Dataset {40992}\r\n",
+      "t_year_1                 Dataset {40992}\r\n",
+      "t_year_2                 Dataset {40992}\r\n"
      ]
     }
    ],
    "source": [
-    "!h5ls ./data/IS1_IS2_AnIS_XOVERS_KAMB_ICE_STREAM_R205.h5"
+    "!h5ls ./data/IS1_IS2_AnIS_XOVER_PIG_ALL_BEAMS_R205.h5"
    ]
   },
   {
